# metodos-matematicos

./: .gitignore  Apresentação.ipynb  Lista_1.ipynb  Lista_2.ipynb  README.md  main.py  pyproject.toml
Lista 1/: Set_1.1_exerc_5.ipynb
app/: app.py
app/damper/: input.py  plots.py  solver.py
